# OnyxCode-OnyxLog-tuiClient

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.opencode/agents/: onyxcode-fixer.md  onyxlog-builder.md  onyxlog-committer.md  onyxlog-doc-writer.md  onyxlog-phase-creator.md  onyxlog-phase-writer.md  onyxlog-planner.md  onyxlog-reviewer.md  onyxlog-tui-builder.md
.opencode/skills/onyxcode-fixer/: skill.md
.opencode/skills/onyxlog-api-patterns/: SKILL.md
.opencode/skills/onyxlog-coding/: SKILL.md
.opencode/skills/onyxlog-commit/: SKILL.md
.opencode/skills/onyxlog-data-layer/: SKILL.md
.opencode/skills/onyxlog-docs/: SKILL.md
.opencode/skills/onyxlog-phase-creator/: SKILL.md
IA/: STATE.md
IA/PHASES/: overview.md  phase-1.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
IA/context/: api-reference.md  auth-flow.md  db-schema.md  server-config.md
src/: app.py  cli.py  config.py  db.py  styles.tcss
src/api/: __init__.py  applications.py  auth.py  client.py  logs.py
src/models/: schemas.py
src/screens/: applications.py  dashboard.py  login.py  logs.py  settings.py
tests/: conftest.py  test_app.py  test_applications_api.py  test_applications_screen.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_dashboard_screen.py  test_db.py  test_login_screen.py  test_logs_api.py  test_logs_screen.py  test_schemas.py  test_settings_screen.py  test_smoke.py  test_streaming.py
(+11 files in other folders)
