[project]
name = "onyxlog-tui"
version = "0.1.0"
description = "Terminal UI client for OnyxLog log management system"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47",
    "rich>=13.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.9",
    "tomli>=2.0",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
onyxlog-tui = "src.app:main"

[tool.setuptools]
packages = ["src", "src.api", "src.models", "src.screens"]
py-modules = ["src.app"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
